@@ -19,6 +19,7 @@ Bug Fixes
 + Properly check for undeclared classes in arrays within phpdoc @param, @property, @method, @var, and @return types.
   Also, fix a bug in resolving namespaces of generic arrays that are nested 2 or more array levels deep.
 + Fix uncaught TypeError when magic property has the same name as a property. (#1141)
++ Make AlwaysReturnPlugin warn about functions/methods with real nullable return types failing to return a value.
 
 24 Sep 2017, Phan 0.10.0
 -----------------------
